refactor(code): setup invoice navigation
the markup has been updated to implement navigation between pages

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -48,7 +48,22 @@ input:checked + svg {
   --fill: var(--system-color-softBlue);
   stroke-dashoffset: 0;
 }
-.summary-grid {
+.invoices {
+  --item-alignment: center;
+}
+.invoices:empty {
+  display: none;
+}
+.invoices a {
+    color: inherit;
+}
+.invoices a::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    z-index: 1;
+}
+.invoices > article {
   --status-padding: var(--box-padding, 0.75rem clamp(0.5rem, 5cqi, 1.5rem));
   --f-size: 1em;
   --f-size-diff: 0.2;
@@ -59,9 +74,10 @@ input:checked + svg {
   text-align: start;
   padding: clamp(0.5em, 5cqi, 1.5em);
   box-shadow: 0 2px 8px 0 var(--system-color-shadow);
+  position: relative;
 }
-.summary-grid:is(:focus-visible, :hover) {
-    border: 1px solid var(--system-color-softBlue);
+.invoices > article:is(:focus-within, :hover) {
+    outline: 1px solid var(--system-color-softBlue);
 }
 
 @media screen and (min-width: 480px) {
@@ -76,7 +92,7 @@ input:checked + svg {
     border-radius: 0 1.25em 1.25em 0;
     visibility: hidden;
   }
-  .summary-grid {
+  .invoices > article {
     --invoice-grid: "ref date name total status arrow"/8ch 1fr 1fr minmax(auto, 0.75fr) auto 1.5em;
     --min-padding: 1em clamp(0.5em, 2cqi, 1.5em);
     --box-padding: 0.625em clamp(0.5em, 2cqi, 1em);
@@ -84,7 +100,7 @@ input:checked + svg {
     --f-size-diff: 0.2;
     gap: 0.5em;
   }
-  .summary-grid::after {
+  .invoices > article::after {
     content: "";
     inline-size: 1.5em;
     aspect-ratio: 1;
@@ -104,7 +120,7 @@ input:checked + svg {
     :is(.drawer, .inv-option input:checked + svg) {
 	    transition: all .35s cubic-bezier(.25, .1, .3, 1.5);
     }
-    .summary-grid {
+    .invoices > article {
         transition: color 0.35s ease-in, background-color 0.35s ease-out;
     }
 
